# perturbed-equilibria

./: .gitignore  README.md  architecture.md  pyproject.toml
bouquet/: TokaMaker_interface.py  __init__.py  plotting.py  sampling.py  uncertainties.py  utils.py
bouquet/io/: GEQDSK_QUANTITIES.md  __init__.py  geqdsk.py  pfile.py
docs/: gui-display-guide.md
examples/COCOS_Bt_Ip/: cocos_and_save_example.ipynb  omfit_cocos_comparison.ipynb
examples/D3D-like/: 2472.gpeckf  TkMkr_D3Dlike_Hmode_BSamp=1.25.geqdsk  TkMkr_D3Dlike_Hmode_BSamp=1.25.peqdsk  bouquet_D3Dlike_example.ipynb
examples/omfit-comparison/: d3dlike.geqdsk  omfit_comparison.ipynb
perturbed_equilibria/: __init__.py  __main__.py  gui.py  plotting.py  sampling.py  uncertainties.py  utils.py
tests/: test_core.py  test_geqdsk.py  test_pfile.py
