[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "perturbed-equilibria"
version = "0.1.0"
description = "GP-sampled perturbed equilibria for uncertainty quantification with TokaMaker"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    # tokamaker here if it becomes pip-installable
]

[project.optional-dependencies]
dev = ["jupyter", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
